Fix intro text wrap on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,9 +2,11 @@ body {
   font-family: 'Ubuntu', sans-serif;
 }
 
-/*#intro-text {
-  font-size: 2.5vw;
-}*/
+@media only screen and (max-width: 640px) {
+  #intro-text {
+  	font-size: 4vw;
+  }
+}
 
 .uk-navbar-container:not(.uk-navbar-transparent), .translucent {
   background: #111;
